--- a/skins/standard/index.css
+++ b/skins/standard/index.css
@@ -21,16 +21,6 @@
         padding: 0.2em 0.2em 0.15em 0.2em;
     }
 
-    /* Hide from NN4 */
-
-    #new_release
-    {
-        border: 2px solid red;
-        padding: 0.5em 1em;
-        margin: 1em;
-        font-weight: bold;
-    }
-
     #new_release .notice
     {
         font-size: 80%;
@@ -39,7 +29,7 @@
 
     #welcome-admin a
     {
-        font-weight: bold;
+        list-style: none;
     }
     
     .bz_common_actions {
@@ -62,16 +52,15 @@
     {
         text-decoration: none;
     }
-
-    #enter_bug { background: url(index/bug.gif)     no-repeat; }
-    #query     { background: url(index/search.gif)  no-repeat; }
-    #account   { background: url(index/account.gif) no-repeat; }
     
     #quicksearchForm
     {
-        clear: both;
-        text-align: center;
-        margin-bottom: 2em;
+        width: 250px;
+        height: 200px;
+
+        margin-top: 2.3em;
+        margin-right: 2.3em;
+        float: right;
     }
     
     #quicksearchForm #quicksearch_main
