--- a/template/en/default/bug/edit.html.tmpl
+++ b/template/en/default/bug/edit.html.tmpl
@@ -268,6 +268,9 @@
             </tr>
           </table>
         </td></tr></table>
+          <br>
+          <input type="checkbox" id="resendtolist" name="resendtolist">
+          <label for="resendtolist">Re-send item to the mailing list</label>
         [% ELSE %]
           <fieldset>
             <legend>Note</legend>
