--- a/template/en/default/global/choose-product.html.tmpl
+++ b/template/en/default/global/choose-product.html.tmpl
@@ -40,6 +40,7 @@
 [% DEFAULT title = "Choose a Product" %]
 [% PROCESS global/header.html.tmpl %]
 
+<p>Choose the area of the Physiome project to which this relates:</p>
 <table>
 
 [% FOREACH c = classifications %]
