--- a/template/en/default/global/variables.none.tmpl
+++ b/template/en/default/global/variables.none.tmpl
@@ -28,15 +28,14 @@
   #%]
 
 [% terms = {
-  "bug" => "bug",
-  "Bug" => "Bug",
-  "abug" => "a bug",
-  "Abug" => "A bug",
-  "aBug" => "a Bug",
-  "ABug" => "A Bug",
-  "bugs" => "bugs",
-  "Bugs" => "Bugs",
-  "zeroSearchResults" => "Zarro Boogs found",
-  "Bugzilla" => "Bugzilla"
+  "bug" => "tracker item",
+  "Bug" => "Tracker Item",
+  "abug" => "a tracker item",
+  "Abug" => "A tracker item",
+  "ABug" => "A Tracker Item",
+  "bugs" => "tracker items",
+  "Bugs" => "Tracker Items",
+  "zeroSearchResults" => "No tracker items found",
+  "Bugzilla" => "Physiome Tracker"
   }
 %]
