Fix link for 'Submit question about CellML'

--- a/template/en/default/global/common-links.html.tmpl
+++ b/template/en/default/global/common-links.html.tmpl
@@ -22,7 +22,7 @@
 [% DEFAULT qs_suffix = "" %]
 <ul class="visualNoMarker">
   <li><a href="./">Main page</a></li>
-  <li><a href="enter_bug.cgi?product=Using%20CellML&format=generalhelp">Submit question about CellML</a></li>
+  <li><a href="enter_bug.cgi?product=CellML general usage&format=generalhelp">Submit question about CellML</a></li>
   <li><a href="enter_bug.cgi?product=cmgui&format=generalhelp">Submit question about cmgui</a></li>
   <li><a href="enter_bug.cgi?product=CellML%20Repository%20Models%20%2F%20Curation%20Issues&format=repomodel">Submit CellML repository issue</a></li>
   <li><a href="enter_bug.cgi?format=software">Submit bug report</a></li>
