Fix templates now that the filter for URIs has been renamed

--- a/template/en/default/bug/create/create-software.html.tmpl
+++ b/template/en/default/bug/create/create-software.html.tmpl
@@ -138,7 +138,7 @@ reported first.
         To pick the right component, you could use the same one as
         similar [% terms.bugs %] you found in your search, or read the full list of
         <a target="_blank" href="describecomponents.cgi?product=
-            [% product.name FILTER url_quote %]">component
+            [% product.name FILTER uri %]">component
         descriptions</a> (opens in new window) if you need more help.
       </p>
     </td>
