--- a/template/en/default/bug/create/create-generalhelp.html.tmpl
+++ b/template/en/default/bug/create/create-generalhelp.html.tmpl
@@ -124,7 +124,7 @@ function PutDescription() {
         To pick the right component, you could use the same one as
         similar [% terms.bugs %] you found in your search, or read the full list of
         <a target="_blank" href="describecomponents.cgi?product=
-            [% product.name FILTER url_quote %]">component
+            [% product.name FILTER uri %]">component
         descriptions</a> (opens in new window) if you need more help.
       </p>
     </td>
