--- a/template/en/default/global/header.html.tmpl
+++ b/template/en/default/global/header.html.tmpl
@@ -327,14 +327,14 @@
 <ul id="portal-personaltools">
   [% IF user.login %]
     [% html_username = user.login FILTER html %]
-    [% filtered_username = user.login FILTER url_quote %]
+    [% filtered_username = user.login FILTER uri %]
     <li class="portalUser">
       [% html_username %]
     </li>
   [% END %]
   
   [% IF user.showmybugslink %]
-    [% filtered_username = user.login FILTER url_quote %]
+    [% filtered_username = user.login FILTER uri %]
     <li><a href="[% Param('mybugstemplate').replace('%userid%', filtered_username) %]">My [% terms.Bugs %]</a></li>
   [% END %]
 
@@ -415,20 +415,20 @@ are here:</span>
          <h3>Saved searches</h3>
          <ul class="visualNoMarker">
          [% IF user.showmybugslink %]
-           [% filtered_username = user.login FILTER url_quote %]
+           [% filtered_username = user.login FILTER uri %]
            <li><a href="[% Param('mybugstemplate').replace('%userid%', filtered_username) %]">My [% terms.Bugs %]</a></li>
          [% END %]
          [% FOREACH q = user.queries %]
            [% IF q.link_in_footer %]
              <li>
-             <a href="buglist.cgi?cmdtype=runnamed&amp;namedcmd=[% q.name FILTER url_quote %]">[% q.name FILTER html %]</a></li>
+             <a href="buglist.cgi?cmdtype=runnamed&amp;namedcmd=[% q.name FILTER uri %]">[% q.name FILTER html %]</a></li>
            [% END %]
          [% END %]
          [% FOREACH q = user.queries_subscribed %]
            <li>
              <a href="buglist.cgi?cmdtype=dorem&amp;remaction=run&amp;namedcmd=
-                      [% q.name FILTER url_quote %]&amp;sharer_id=
-                      [% q.user.id FILTER url_quote %]"
+                      [% q.name FILTER uri %]&amp;sharer_id=
+                      [% q.user.id FILTER uri %]"
                 class="shared"
                 title="Shared by [% q.user.identity FILTER html %]"
                 >[% q.name FILTER html FILTER no_break %]</a></li>
