--- a/template/en/default/global/common-links.html.tmpl
+++ b/template/en/default/global/common-links.html.tmpl
@@ -23,7 +23,7 @@
 <ul class="visualNoMarker">
   <li><a href="./">Main page</a></li>
   <li><a href="enter_bug.cgi?product=CellML general usage&format=generalhelp">Submit question about CellML</a></li>
-  <li><a href="enter_bug.cgi?product=cmgui&format=generalhelp">Submit question about cmgui</a></li>
+  <li><a href="enter_bug.cgi?product=Zinc&format=generalhelp">Submit question about Zinc</a></li>
   <li><a href="enter_bug.cgi?product=CellML%20Repository%20Models%20%2F%20Curation%20Issues&format=repomodel">Submit CellML repository issue</a></li>
   <li><a href="enter_bug.cgi?format=software">Submit bug report</a></li>
   <li><a href="enter_bug.cgi">Advanced submission</a></li>
