--- a/template/en/default/index.html.tmpl
+++ b/template/en/default/index.html.tmpl
@@ -130,7 +130,7 @@ YAHOO.util.Event.onDOMReady(onLoadActions);
     <li id="submit-a">Submit a question, comment, problem report or suggestion about:
       <ul>
         <li id="cellml-report"><a href="enter_bug.cgi?product=Using%20CellML&format=generalhelp">CellML</a>.</li>
-        <li id="cellml-report"><a href="enter_bug.cgi?product=cmgui&format=generalhelp">cmgui</a>.</li>
+        <li id="cellml-report"><a href="enter_bug.cgi?product=Zinc&format=generalhelp">Zinc</a>.</li>
         <li id="repo-report"><a href="enter_bug.cgi?product=CellML%20Repository%20Models%20%2F%20Curation%20Issues&format=repomodel">a repository model</a>.</li>
         <li id="enter-general-question"><a href="enter_bug.cgi?format=software">a web service or software program</a>.</li>
       </ul>
@@ -140,9 +140,6 @@ YAHOO.util.Event.onDOMReady(onLoadActions);
             </li>
             <li>
               <a id="query" href="query.cgi"><span>Search</span></a>
-            </li>
-            <li>
-              <a id="account"
             </li>
           </ul>
         </div>
